little fixes
added scrollbar enter keyup listener on input

--- a/todolist/src/components/tasklist/task/task.css
+++ b/todolist/src/components/tasklist/task/task.css
@@ -10,7 +10,6 @@ input:focus {
   justify-self: center;
   align-items: center;
   gap: 20px;
-  top: 50px;
   border-radius: 8px;
   margin-bottom: 12px;
 }
